v6.7.12 6th October 2023
  - Classes will automatically support being iterated over if they implement
    '__getitem__()' or 'operator[]' and have a method annotated with '__len__'.
  - Bug fixes.

v6.7.11 31st July 2023
  - Bug fixes.

v6.7.10 17th July 2023
  - Added the --minimum-glibc-version command line option to sip-wheel.
  - The latest version of ABI v13 is v13.5.2.
  - The latest version of ABI v12 is v12.12.2.
  - Bug fixes.

v6.7.9 12th April 2023
  - The latest version of ABI v13 is v13.5.1.
  - The latest version of ABI v12 is v12.12.1.
  - Bug fixes.

v6.7.8 4th April 2023
  - The latest version of ABI v13 is v13.5.0.
  - The latest version of ABI v12 is v12.12.0.
  - The 'wheel-includes' value of the 'tool.sip.project' section of
    pyproject.toml now supports the use of absolute file patterns.
  - Replaced the use of the 'toml' package with the standard library 'tomllib'
    package for Python v3.11 and later, and the 'tomli' package for earlier
    versions of Python.
  - Bug fixes.

v6.7.7 4th February 2023
  - Bug fixes.

v6.7.6 25th January 2023
  - The latest version of ABI v13 is v13.4.1.
  - The latest version of ABI v12 is v12.11.1.
  - Significantly reduced the memory requirements.
  - Bug fixes.

v6.7.4 29th October 2022
  - Bug fixes.

v6.7.3 27th October 2022
  - Bug fixes.

v6.7.2 12th October 2022
  - Bug fixes.

v6.7.1 5th October 2022
  - Bug fixes.

v6.7.0 17th September 2022
  - Added the /NoAssignmentOperator/, /NoCopyCtor/ and /NoDefaultCtor/ mapped
    type annotations.
  - Added the --generator-version command line option to sip-distinfo.
  - Added the 'generator_version' argument to
    Project.get_sip_distinfo_command_line().
  - The resolver/transform stage has been replaced with a pure Python
    implementation.
  - Bug fixes.

v6.6.2 6th June 2022
  - Enums created with ABI v13 now handle unexpected values by creating
    corresponding pseudo-members.
  - Any config settings passed by a PEP 571 frontend are now used.