@@ -26,9 +26,11 @@
 
 /* Use symbolic names for (significant) ABI versions. */
 
+#define ABI_13_6    0x0d06
 #define ABI_13_4    0x0d04
 #define ABI_13_1    0x0d01
 #define ABI_13_0    0x0d00
+#define ABI_12_13   0x0c0d
 #define ABI_12_11   0x0c0b
 #define ABI_12_9    0x0c09
 #define ABI_12_8    0x0c08
