@@ -1463,14 +1463,25 @@ module, that can be used by handwritten code in specification files.
     This provides access to a Python type object's ``tp_dict`` field and is
     typically used when the limited Python API is enabled.
 
-   .. note::
-        With Python v3.12 and later this returns a new reference (rather than
-        borrowed) and it may be ``NULL``.
+    .. note::
+        This is deprecated in ABI v13.6 and must not be used with Python v3.12
+        and later.
 
     :param py_type:
         the type object.
     :return:
         the value of the type object's ``tp_dict`` field.
+
+
+.. c:function:: PyObject *sipPyTypeDictRef(PyTypeObject *py_type)
+
+    This provides access to a Python type object's type dictionary and is
+    typically used when the limited Python API is enabled.
+
+    :param py_type:
+        the type object.
+    :return:
+        a new reference to type object's type dictionary.
 
 
 .. c:function:: void sipPrintObject(PyObject *obj)
