@@ -381,6 +381,7 @@ static sipNewUserTypeFunc sip_api_set_new_user_type_handler(
 static void sip_api_set_type_user_data(sipWrapperType *wt, void *data);
 static void *sip_api_get_type_user_data(const sipWrapperType *wt);
 static PyObject *sip_api_py_type_dict(const PyTypeObject *py_type);
+static PyObject *sip_api_py_type_dict_ref(PyTypeObject *py_type);
 static const char *sip_api_py_type_name(const PyTypeObject *py_type);
 static int sip_api_get_method(PyObject *obj, sipMethodDef *method);
 static PyObject *sip_api_from_method(const sipMethodDef *method);
@@ -620,6 +621,10 @@ static const sipAPIDef sip_api = {
      */
     sip_api_is_py_method_12_8,
     sip_api_next_exception_handler,
+    /*
+     * The following are part of the public API.
+     */
+    sip_api_py_type_dict_ref,
 };
 
 
@@ -12593,14 +12598,33 @@ static void *sip_api_get_type_user_data(const sipWrapperType *wt)
 
 
 /*
- * Get the dict of a Python type (on behalf of the limited API).
+ * Get a borrowed reference to the dict of a Python type (on behalf of the
+ * limited API).  This is deprecated in ABI v12.13 and must not be used with
+ * Python v3.12 and later.
  */
 static PyObject *sip_api_py_type_dict(const PyTypeObject *py_type)
+{
+    PyErr_WarnEx(PyExc_DeprecationWarning,
+            "sipPyTypeDict() is deprecated, the extension module should use "
+            "sipPyTypeDictRef() instead",
+            1);
+
+    return py_type->tp_dict;
+}
+
+
+/*
+ * Get a new reference to the dict of a Python type (on behalf of the limited
+ * API).
+ */
+static PyObject *sip_api_py_type_dict_ref(PyTypeObject *py_type)
 {
 #if PY_VERSION_HEX >= 0x030c0000
     return PyType_GetDict(py_type);
 #else
-    return py_type->tp_dict;
+    PyObject *ref = py_type->tp_dict;
+    Py_XINCREF(ref);
+    return ref;
 #endif
 }
 
